--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 100",
     "preview": "vite preview",
     "compile": "graphql-codegen",
-    "watch": "graphql-codegen -w"
+    "watch": "graphql-codegen -w",
+    "start": "serve -s build",
+    "build": "vite build",
+    "dev": "vite"
   },
   "dependencies": {
     "@apollo/client": "^3.9.10",
@@ -41,7 +42,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
