--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 100",
     "preview": "vite preview",
-    "compile": "graphql-codegen",
-    "watch": "graphql-codegen -w",
-    "start": "serve -s vite build",
-    "build": "vite build",
-    "dev": "vite"
+    "start": "vite start"
   },
   "dependencies": {
     "@apollo/client": "^3.9.10",
@@ -41,9 +39,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-scroll": "^1.9.0",
-    "redux-persist": "^6.0.0",
-    "serve": "^14.2.1"
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
