--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,9 @@
 # }
 
 
-server {
+# server {
 
-  listen: 80
+  # listen: 80
 
 #   location / {
 #     proxy_pass http://mirrory-ui;
@@ -26,4 +26,4 @@ server {
 #     proxy_set_header Host $host;
 #     proxy_cache_bypass $http_upgrade;
 #   }
-}
+# }
