--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
         env:
-          VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
+          VITE_CLIENT_ID: ${{ env.VITE_CLIENT_ID }}
       - run: npm i
       - run: npm run build --if-present
       - run: pm2 restart mirrory-ui
